--- a/gtksharp.csproj
+++ b/gtksharp.csproj
@@ -43,14 +43,14 @@
     <Reference Include="glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Package>glib-sharp-2.0</Package>
     </Reference>
-    <Reference Include="pango-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
-      <Package>gtk-sharp-2.0</Package>
-    </Reference>
     <Reference Include="System" />
+    <Reference Include="Mono.Cairo" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ppal.cs" />
     <Compile Include="MainWindowView.cs" />
     <Compile Include="MainWindowCore.cs" />
+    <Compile Include="DrawingDemoView.cs" />
+    <Compile Include="DrawingDemoCore.cs" />
   </ItemGroup>
 </Project>
